# self-organizing-map

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
r_code/: SOM_R.R
results/after/: params.md
results/before/: params.md
results/new_result_1/: params.md
results/result_1/: params.md
results/result_2/: params.md
results/result_3/: params.md
src/: main.py
