[project]
name = "self-organizing-map"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.6",
]


[tool.ruff]
line-length = 100
target-version = "py312"
include = ["pyproject.toml", "src/**/*.py", "src/*.py"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
length-sort = true

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
mypy_path = "src"
python_version = "3.12"
explicit_package_bases = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true
